# AMCL header files

set(AMCL_HEADERS
ecdh.h  
rsa.h    
x509.h
version.h
utils.h
${CMAKE_CURRENT_BINARY_DIR}/arch.h
${CMAKE_CURRENT_BINARY_DIR}/amcl.h) 

if(BUILD_MPIN)
  set(AMCL_HEADERS ${AMCL_HEADERS} mpin.h)
endif(BUILD_MPIN)

if(BUILD_WCC)
  set(AMCL_HEADERS ${AMCL_HEADERS} wcc.h)
endif(BUILD_WCC)

install (DIRECTORY DESTINATION include DIRECTORY_PERMISSIONS
        OWNER_WRITE OWNER_READ OWNER_EXECUTE
        GROUP_WRITE GROUP_READ
        WORLD_WRITE WORLD_READ WORLD_EXECUTE)

install (FILES ${AMCL_HEADERS} DESTINATION include PERMISSIONS
        OWNER_WRITE OWNER_READ OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)

# Copy headers file for testing before installation
file(COPY ${AMCL_HEADERS} DESTINATION "${PROJECT_BINARY_DIR}/wrappers/go/")
